Solved the height alignement problem on the freemium offers

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -768,6 +768,7 @@ hr{
 	border-top: 4px solid #363636;
 	border-bottom: 4px solid #363636;
 	background-color: #ffffff;
+	height: 450px;
 }
 
 #last-booster-formula {
